test/valid/builtins/isNaN.js
var x = isNaN(3);

var y = isNaN(NaN) == false;
