test/invalid/builtins/parseInt.js
var y = parseInt('3'); // base always required
